Properly handle flags in example makefile

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -1,5 +1,5 @@
-CXXFLAGS=$(shell pkg-config --cflags libbitcoin-client) -ggdb
-LIBS=$(shell pkg-config --libs libbitcoin-client)
+CXXFLAGS += $(shell pkg-config --cflags libbitcoin-client) -ggdb
+LIBS += $(shell pkg-config --libs libbitcoin-client)
 
 default: all
 
@@ -7,10 +7,10 @@ default: all
 	$(CXX) -o $@ -c $< $(CXXFLAGS)
 
 watcher: watcher.o
-	$(CXX) -o $@ $< $(LIBS)
+	$(CXX) $(LDFLAGS) -o $@ $< $(LIBS)
 
 picker: picker.o
-	$(CXX) -o $@ $< $(LIBS)
+	$(CXX) $(LDFLAGS) -o $@ $< $(LIBS)
 
 all: picker watcher
 
