--- a/libbitcoin-client.pc.in
+++ b/libbitcoin-client.pc.in
@@ -7,6 +7,6 @@ Name: libbitcoin-client
 Description: Client library for communicating with SX servers.
 URL: http://libbitcoin.dyne.org/libbitcoin-client/
 Version: @PACKAGE_VERSION@
-Requires: libwallet libbitcoin libobelisk
+Requires: libbitcoin libobelisk libwallet
 Cflags: -I${includedir}
 Libs: -L${libdir} -lbitcoin-client
