--- a/libbitcoin-watcher.pc.in
+++ b/libbitcoin-watcher.pc.in
@@ -3,10 +3,10 @@ exec_prefix=@exec_prefix@
 libdir=@libdir@
 includedir=@includedir@
 
-Name: libbitcoin-client
+Name: libbitcoin-watcher
 Description: Client library for communicating with SX servers.
-URL: http://libbitcoin.dyne.org/libbitcoin-client/
+URL: http://libbitcoin.dyne.org/libbitcoin-watcher/
 Version: @PACKAGE_VERSION@
 Requires: libbitcoin libobelisk libwallet
 Cflags: -I${includedir}
-Libs: -L${libdir} -lbitcoin-client
+Libs: -L${libdir} -lbitcoin-watcher
