Port to libbitcoin-client

--- a/configure.ac
+++ b/configure.ac
@@ -20,7 +20,7 @@ PKG_PROG_PKG_CONFIG
 AM_CXXFLAGS="-ggdb -g3 -Wall -Wno-missing-braces -pedantic -Wextra -fstack-protector-all -DDEBUG -fvisibility=hidden -fvisibility-inlines-hidden"
 AC_SUBST([AM_CXXFLAGS])
 
-PKG_CHECK_MODULES([libbitcoin], [libbitcoin libobelisk libwallet])
+PKG_CHECK_MODULES([libbitcoin], [libbitcoin libwallet libbitcoin-client])
 
 AC_ARG_WITH([pkgconfigdir], AS_HELP_STRING([--with-pkgconfigdir=PATH],
     [Path to the pkgconfig directory [[LIBDIR/pkgconfig]]]),
