--- a/libbitcoin-watcher.pc.in
+++ b/libbitcoin-watcher.pc.in
@@ -7,6 +7,6 @@ Name: libbitcoin-watcher
 Description: Client library for communicating with SX servers.
 URL: http://libbitcoin.dyne.org/libbitcoin-watcher/
 Version: @PACKAGE_VERSION@
-Requires: libbitcoin libobelisk libwallet
+Requires: libbitcoin libwallet libbitcoin-client
 Cflags: -I${includedir}
 Libs: -L${libdir} -lbitcoin-watcher
