Replace the watcher with something new

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -3,8 +3,11 @@ AUTOMAKE_OPTIONS = subdir-objects
 lib_LTLIBRARIES = libbitcoin-watcher.la
 AM_CPPFLAGS = -I$(srcdir)/../include $(libbitcoin_CFLAGS)
 libbitcoin_watcher_la_SOURCES = \
+    address_updater.cpp \
+    picker.cpp \
     watcher.cpp \
-    picker.cpp
+    tx_db.cpp \
+    tx_updater.cpp
 
 libbitcoin_watcher_la_LIBADD = $(libbitcoin_LIBS)
 
