--- a/include/bitcoin/Makefile.am
+++ b/include/bitcoin/Makefile.am
@@ -4,5 +4,8 @@ bitcoin_include_HEADERS = \
 
 bitcoin_watcher_includedir = $(includedir)/bitcoin/watcher
 bitcoin_watcher_include_HEADERS = \
+    watcher/address_updater.hpp \
     watcher/picker.hpp \
-    watcher/watcher.hpp
+    watcher/watcher.hpp \
+    watcher/tx_db.hpp \
+    watcher/tx_updater.hpp
